src/objects/Email_Notification__c.object
<CustomObject>
    <description>This object is used to send out email messages using a workflow rule. When a new Email Message record is inserted, an email is sent out using the data from the inserted record.</description>
    <fields>
        <fullName>Attachment_Names__c</fullName>
        <description>Attachment Names</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Parent_Id__c</fullName>
        <description>Attachment Parent Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>Body of email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credential</description>
        <label>Credential</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Email Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Parent_Id__c</fullName>
        <formula>IF( NOT(ISBLANK(Credential__c)),Credential__c,
IF( NOT(ISBLANK(Permit_Plan_Review__c)),Permit_Plan_Review__c,
IF( NOT(ISBLANK(Renewal_Application__c)),Renewal_Application__c,null
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the email been sent?</description>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <description>Email Template Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Parent_Id__c</fullName>
        <description>Email Template Parent Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Template Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email field but no relation to any contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expired_Permit_Credential_Status__c</fullName>
        <description>Expired Permit/Credential Status</description>
        <label>Expired Permit/Credential Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expired_Permit_Credential_SubStatus__c</fullName>
        <description>Expired Permit/Credential SubStatus</description>
        <label>Expired Permit/Credential SubStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>BGBK__Bill__c</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Param1__c</fullName>
        <description>Parameter of the Email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Param1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param2__c</fullName>
        <description>Parameter of the Email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Param2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param3__c</fullName>
        <description>Parameter of the Email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Param3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Plan_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Permit/Plan Review</description>
        <label>Permit/Plan Review</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Contact</description>
        <label>Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal Application</description>
        <label>Renewal Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <description>Task Subject</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <formula>IF( NOT(ISBLANK(Recipient_Contact__r.Email)),
Recipient_Contact__r.Email,
Email__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This is the type of email going out.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send Individual Security Code</fullName>
                </value>
                <value>
                    <fullName>Send Business Security Code</fullName>
                </value>
                <value>
                    <fullName>Raw HTML Body</fullName>
                </value>
                <value>
                    <fullName>User Upgrade</fullName>
                </value>
                <value>
                    <fullName>Email with Attachments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Recipient_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EM-{000000}</displayFormat>
        <label>Email Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>